# IOT-Server_m

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  seed_admin.py
app/: config.py  main.py
app/database/: format.py  model.py
app/domain/administrator/: controller.py  service.py
app/domain/application/: controller.py  repository.py  schemas.py  service.py
app/domain/audit/: repository.py
app/domain/auth/: controller.py  schemas.py  security.py  service.py
app/domain/device/: controller.py  model.py  repository.py  schemas.py  service.py
app/domain/manager/: controller.py  model.py  service.py
app/domain/personal_data/: schemas.py  sensitive_data_service.py  service.py
app/domain/service/: controller.py  repository.py  schemas.py  service.py
app/domain/user/: controller.py  (+1 more)
app/shared/: exceptions.py  logging.py
docs/: README.md
tests/: conftest.py  test_application_unit.py  test_service_unit.py
tests/administrator/: test_crud.py
tests/application_auth/: test_auth.py
tests/auth/: test_auth_validation.py  test_change_password.py  test_login.py  test_logout.py
tests/auth_manager/: test_auth_manager.py
tests/auth_split/: test_human_auth_routes.py
tests/authorization/: __init__.py  test_api_policies.py  test_detailed_permissions.py  test_oso_policies.py
tests/device/: __init__.py  test_crud.py
tests/manager/: __init__.py  test_crud.py
tests/puzzle_auth/: test_puzzle.py
tests/session/: conftest.py  test_integration.py  test_integration_flows.py  test_per_key_encryption.py  test_session.py
tests/user/: test_crud.py
(+36 files in other folders)
